--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -1737,6 +1737,12 @@ label{
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
 }
 
+.form-control.select2 {
+  padding:0;
+  border-radius: 0px;
+  -webkit-border-radius: 0;
+}
+
 .input-group .btn{
   margin:0;
   margin-left:-1px;
@@ -1760,6 +1766,10 @@ label{
 .form-control:focus {
   border-color:#2598f9;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+}
+
+.form-control.select2:focus {
+  box-shadow: none!important;
 }
 
 select.form-control, textarea.form-control{
@@ -3255,3 +3265,9 @@ button::-moz-focus-inner {
   display: none;
 }
 
+.selectajax-loading {
+  display: block;
+  width: 38px;
+  height: 30px;
+  background: url(/admin/images/loading_submit.gif) no-repeat;
+}
