--- a/src/app/Admin/Views/essential/log_view.phtml
+++ b/src/app/Admin/Views/essential/log_view.phtml
@@ -1,4 +1,4 @@
-<input type="hidden" id="link_prefix" value="/admin/log/" />
+<input type="hidden" id="link_prefix" value="/admin/log" />
 
 <div class="row">
   <div class="col-md-12">
