--- a/src/app/Site/Views/layouts/layout.phtml
+++ b/src/app/Site/Views/layouts/layout.phtml
@@ -2,35 +2,33 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8">
+    <title><?php echo $data['metatags']->getTitle(); ?></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="<?php echo $data['settings']['description'] ?>">
-    <meta name="author" content="DIN DIGITAL">
+    <meta name="description" content="<?php echo $data['metatags']->getDescription(); ?>">
+    <meta name="author" content="<?php echo $data['metatags']->getAuthor(); ?>">
     <link rel="shortcut icon" href="/favicon.ico">
+    <meta property="og:locale" content="<?php echo $data['metatags']->getLocale(); ?>">
+    <meta property="og:url" content="<?php echo $data['metatags']->getUrl(); ?>">
+    <meta property="og:title" content="<?php echo $data['metatags']->getTitle(); ?>">
+    <meta property="og:site_name" content="<?php echo $data['metatags']->getName(); ?>">
+    <meta property="og:description" content="<?php echo $data['metatags']->getDescription(); ?>">
+    <meta property="og:image" content="<?php echo $data['metatags']->getImage(); ?>">
+    <meta property="og:image:type" content="<?php echo $data['metatags']->getImageType(); ?>">
+    <meta property="og:image:width" content="<?php echo $data['metatags']->getImageWidth(); ?>">
+    <meta property="og:image:height" content="<?php echo $data['metatags']->getImageHeight(); ?>">
+    <?php if ( $data['metatags']->getType() == 'article' ): ?>
+      <meta property="og:type" content="article">
+      <meta property="article:author" content="<?php echo $data['metatags']->getTypeAuthor(); ?>">
+      <meta property="article:section" content="<?php echo $data['metatags']->getSection(); ?>">
+      <meta property="article:tag" content="<?php echo $data['metatags']->getKeywords(); ?>">
+      <meta property="article:published_time" content="<?php echo $data['metatags']->getDate(); ?>">
+    <?php else: ?>
+      <meta property="og:type" content="website">
+    <?php endif; ?>
 
-    <meta property="og:locale" content="pt_BR">
-    <meta property="og:url" content="http://www.meusite.com.br/ola-mundo">
-    <meta property="og:title" content="Título da página ou artigo">
-    <meta property="og:site_name" content="Nome do meu site">
-    <meta property="og:description" content="Minha boa descrição para intrigar os usuários.">
-    <meta property="og:image" content="www.meusite.com.br/imagem.jpg">
-    <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:image:width" content="800">
-    <meta property="og:image:height" content="600">
+    <link href="http://fonts.googleapis.com/css?family=Maven+Pro:400,700,500,900" rel="stylesheet" type="text/css" />
 
-    <!-- para páginas insstitucionais -->
-    <meta property="og:type" content="website">
-
-    <!-- para páginas de artigos, notícias -->
-    <meta property="og:type" content="article">
-    <meta property="article:author" content="Autor do artigo">
-    <meta property="article:section" content="Seção do artigo">
-    <meta property="article:tag" content="Tags do artigo">
-    <meta property="article:published_time" content="date_time">
-
-    <title><?php echo $data['settings']['title'] ?></title>
-
-    <?php echo $data['assets']['css']['css_site']; ?>
-    <?php echo $data['assets']['js']['js_modernizr']; ?>
+    <?php echo $data['assets']['css']; ?>
 
   </head>
 
@@ -46,29 +44,31 @@
 
     {$FOOTER}
 
-    <?php echo $data['assets']['js']['js_site']; ?>
+    <?php echo $data['assets']['js']; ?>
 
     <div id="fb-root"></div>
 
     <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          appId: '144825899061855',
-          status: true,
-          xfbml: true
-        });
-      };
+      $(window).ready(function() {
+        window.fbAsyncInit = function() {
+          FB.init({
+            appId: '',
+            status: true,
+            xfbml: true
+          });
+        };
 
-      (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) {
-          return;
-        }
-        js = d.createElement(s);
-        js.id = id;
-        js.src = "//connect.facebook.net/pt_BR/all.js";
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
+        (function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) {
+            return;
+          }
+          js = d.createElement(s);
+          js.id = id;
+          js.src = "//connect.facebook.net/pt_BR/all.js";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+      });
     </script>
 
 
