--- a/src/app/Site/Views/page.phtml
+++ b/src/app/Site/Views/page.phtml
@@ -1,6 +1,6 @@
 <div>
-  <h1><?php echo $data['page']['title']; ?></h1>
-  <div><?php echo $data['page']['content']; ?></div>
+  <h1><?php echo $data['page']->getTitle(); ?></h1>
+  <div><?php echo $data['page']->getContent(); ?></div>
 </div>
 
 <hr>
