--- a/src/app/Admin/Views/essential/index.phtml
+++ b/src/app/Admin/Views/essential/index.phtml
@@ -1,3 +1,3 @@
 <div class="cl-mcont">
-  <h3 class="text-center">Content goes here!</h3>
+  <h3 class="text-center">Olá <?php echo $data['admin']['name'] ?>, bem vindo ao painel de controle.</h3>
 </div>
