--- a/src/app/Admin/Views/essential/login.phtml
+++ b/src/app/Admin/Views/essential/login.phtml
@@ -3,7 +3,7 @@
   <div class="middle-login">
     <div class="block-flat">
       <div class="header">
-        <h3 class="text-center"><img class="logo-img" src="/admin/images/logo.png" alt="logo"/>DIN DIGITAL</h3>
+        <h3 class="text-center"><?php echo CLIENTNAME; ?></h3>
       </div>
       <div>
         <form style="margin-bottom: 0px !important;" class="ajaxform form-horizontal" method="post" action="" autocomplete="on" onsubmit="return false;">
@@ -56,7 +56,7 @@
         </form>
       </div>
     </div>
-    <div class="text-center out-links"><a href="#">&copy; 2014 DIN DIGITAL</a></div>
+    <div class="text-center out-links"><a href="#">&copy; 2014 <?php echo AGENCY; ?></a></div>
   </div>
 
 </div>
