--- a/src/app/Admin/Views/layouts/login.phtml
+++ b/src/app/Admin/Views/layouts/login.phtml
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="/admin/images/favicon.png">
 
-    <title>DIN DIGITAL</title>
+    <title><?php echo CLIENTNAME; ?> - Painel de Controle</title>
 
     <?php echo $data['assets']['css']['css_admgoogle']; ?>
     <?php echo $data['assets']['css']['css_admlogin']; ?>
