--- a/src/app/Admin/Views/layouts/layout.phtml
+++ b/src/app/Admin/Views/layouts/layout.phtml
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="images/favicon.png">
 
-    <title>DIN DIGITAL</title>
+    <title><?php echo CLIENTNAME; ?> - Painel de Controle</title>
 
     <?php echo $data['assets']['css']['css_admgoogle']; ?>
     <?php echo $data['assets']['css']['css_adm']; ?>
@@ -30,7 +30,7 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="fa fa-gear"></span>
           </button>
-          <a class="navbar-brand" href="#"><span>DIN DIGITAL</span></a>
+          <a class="navbar-brand" href="#"><span><?php echo CLIENTNAME; ?></span></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right user-nav">
