Atualização de informações possíveis no cadastro de Social Media Credentials

--- a/src/app/Admin/Views/socialmedia_credentials_save.phtml
+++ b/src/app/Admin/Views/socialmedia_credentials_save.phtml
@@ -1,142 +1,266 @@
 <div class="row">
-  <div class="col-md-12">
+<div class="col-md-12">
 
-    {$ALERTS}
+{$ALERTS}
 
-    <div class="block-flat">
-      <div class="header">
-        <h3>Cadastro de <?php echo $this->_data['entity']['section']; ?></h3>
-      </div>
-      <div class="content">
+<div class="block-flat">
+<div class="header">
+  <h3>Cadastro de <?php echo $this->_data['entity']['section']; ?></h3>
+</div>
+<div class="content">
 
-        <form id="main_form" class="ajaxform form-horizontal group-border-dashed" method="post" style="border-radius: 0px;" onsubmit="return false;">
+<form id="main_form" class="ajaxform form-horizontal group-border-dashed" method="post" style="border-radius: 0px;" onsubmit="return false;">
 
 
-          <div class="form-group form-group-submit">
-            <span class="loadingsubmit"></span>
-            <button type="submit" class="btn btn-default" tabindex="-1">Salvar</button>
-          </div>
+<div class="form-group form-group-submit">
+  <span class="loadingsubmit"></span>
+  <button type="submit" class="btn btn-default" tabindex="-1">Salvar</button>
+</div>
 
-          <div class="form-group">
-            <label class="col-sm-2 control-label">FB APP ID</label>
-            <div class="col-sm-10">
-              <input name="fb_app_id" type="text" value="<?php echo $data['table']['fb_app_id']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
+<div class="col-sm-12">
+  <span class="col-sm-2"></span>
+  <h3>Links</h3>
+</div>
 
-          <div class="form-group">
-            <label class="col-sm-2 control-label">FB APP SECRET</label>
-            <div class="col-sm-10">
-              <input name="fb_app_secret" type="text" value="<?php echo $data['table']['fb_app_secret']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">FB PAGE</label>
-            <div class="col-sm-10">
-              <input name="fb_page" type="text" value="<?php echo $data['table']['fb_page']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">FB ACCESS TOKEN</label>
-            <div class="col-sm-10">
-              <input name="fb_access_token" type="text" value="<?php echo $data['table']['fb_access_token']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">TW CONSUMER KEY</label>
-            <div class="col-sm-10">
-              <input name="tw_consumer_key" type="text" value="<?php echo $data['table']['tw_consumer_key']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">TW CONSUMER SECRET</label>
-            <div class="col-sm-10">
-              <input name="tw_consumer_secret" type="text" value="<?php echo $data['table']['tw_consumer_secret']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">TW ACCESS TOKEN</label>
-            <div class="col-sm-10">
-              <input name="tw_access_token" type="text" value="<?php echo $data['table']['tw_access_token']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">TW ACCESS SECRET</label>
-            <div class="col-sm-10">
-              <input name="tw_access_secret" type="text" value="<?php echo $data['table']['tw_access_secret']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">ISSUU KEY</label>
-            <div class="col-sm-10">
-              <input name="issuu_key" type="text" value="<?php echo $data['table']['issuu_key']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">ISSUU SECRET</label>
-            <div class="col-sm-10">
-              <input name="issuu_secret" type="text" value="<?php echo $data['table']['issuu_secret']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">SoundCloud ID</label>
-            <div class="col-sm-10">
-              <input name="sc_client_id" type="text" value="<?php echo $data['table']['sc_client_id']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">SoundCloud Secret</label>
-            <div class="col-sm-10">
-              <input name="sc_client_secret" type="text" value="<?php echo $data['table']['sc_client_secret']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">SoundCloud Token</label>
-            <div class="col-sm-10">
-              <input name="sc_token" type="text" value="<?php echo $data['table']['sc_token']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">YouTube ID</label>
-            <div class="col-sm-10">
-              <input name="youtube_id" type="text" value="<?php echo $data['table']['youtube_id']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">YouTube Secret</label>
-            <div class="col-sm-10">
-              <input name="youtube_secret" type="text" value="<?php echo $data['table']['youtube_secret']; ?>" placeholder="" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">YouTube Token</label>
-            <div class="col-sm-10">
-              <textarea name="youtube_token" class="form-control" rows="4" placeholder=""><?php echo $data['table']['youtube_token']; ?></textarea>
-            </div>
-          </div>
-
-          <div class="form-group form-group-submit">
-            <span class="loadingsubmit"></span>
-            <button type="submit" class="btn btn-default" tabindex="-1">Salvar</button>
-          </div>
-
-        </form>
-      </div>
-    </div>
-
+<div class="form-group">
+  <label class="col-sm-2 control-label">Twitter</label>
+  <div class="col-sm-10">
+    <input name="link_twitter" type="text" value="<?php echo $data['table']['link_twitter']; ?>" placeholder="" class="form-control">
   </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">Facebook</label>
+  <div class="col-sm-10">
+    <input name="link_facebook" type="text" value="<?php echo $data['table']['link_facebook']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">Google+</label>
+  <div class="col-sm-10">
+    <input name="link_google" type="text" value="<?php echo $data['table']['link_google']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">Instagram</label>
+  <div class="col-sm-10">
+    <input name="link_instagram" type="text" value="<?php echo $data['table']['link_instagram']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">Flickr</label>
+  <div class="col-sm-10">
+    <input name="link_flickr" type="text" value="<?php echo $data['table']['link_flickr']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">Youtube</label>
+  <div class="col-sm-10">
+    <input name="link_youtube" type="text" value="<?php echo $data['table']['link_youtube']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">Issuu</label>
+  <div class="col-sm-10">
+    <input name="link_issuu" type="text" value="<?php echo $data['table']['link_issuu']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">SoundCloud</label>
+  <div class="col-sm-10">
+    <input name="link_soundcloud" type="text" value="<?php echo $data['table']['link_soundcloud']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="col-sm-12">
+  <span class="col-sm-2"></span>
+  <h3>Facebook</h3>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">FB APP ID</label>
+  <div class="col-sm-10">
+    <input name="fb_app_id" type="text" value="<?php echo $data['table']['fb_app_id']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">FB APP SECRET</label>
+  <div class="col-sm-10">
+    <input name="fb_app_secret" type="text" value="<?php echo $data['table']['fb_app_secret']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">FB ACCESS TOKEN</label>
+  <div class="col-sm-10">
+    <input name="fb_access_token" type="text" value="<?php echo $data['table']['fb_access_token']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">FB PAGE</label>
+  <div class="col-sm-10">
+    <input name="fb_page" type="text" value="<?php echo $data['table']['fb_page']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="col-sm-12">
+  <span class="col-sm-2"></span>
+  <h3>Twitter</h3>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">TW USER</label>
+  <div class="col-sm-10">
+    <input name="tw_user" type="text" value="<?php echo $data['table']['tw_user']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">TW CONSUMER KEY</label>
+  <div class="col-sm-10">
+    <input name="tw_consumer_key" type="text" value="<?php echo $data['table']['tw_consumer_key']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">TW CONSUMER SECRET</label>
+  <div class="col-sm-10">
+    <input name="tw_consumer_secret" type="text" value="<?php echo $data['table']['tw_consumer_secret']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">TW ACCESS TOKEN</label>
+  <div class="col-sm-10">
+    <input name="tw_access_token" type="text" value="<?php echo $data['table']['tw_access_token']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">TW ACCESS SECRET</label>
+  <div class="col-sm-10">
+    <input name="tw_access_secret" type="text" value="<?php echo $data['table']['tw_access_secret']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="col-sm-12">
+  <span class="col-sm-2"></span>
+  <h3>Issuu</h3>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">ISSUU KEY</label>
+  <div class="col-sm-10">
+    <input name="issuu_key" type="text" value="<?php echo $data['table']['issuu_key']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">ISSUU SECRET</label>
+  <div class="col-sm-10">
+    <input name="issuu_secret" type="text" value="<?php echo $data['table']['issuu_secret']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="col-sm-12">
+  <span class="col-sm-2"></span>
+  <h3>SoundCloud</h3>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">SoundCloud ID</label>
+  <div class="col-sm-10">
+    <input name="sc_client_id" type="text" value="<?php echo $data['table']['sc_client_id']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">SoundCloud Secret</label>
+  <div class="col-sm-10">
+    <input name="sc_client_secret" type="text" value="<?php echo $data['table']['sc_client_secret']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">SoundCloud Token</label>
+  <div class="col-sm-10">
+    <input name="sc_token" type="text" value="<?php echo $data['table']['sc_token']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="col-sm-12">
+  <span class="col-sm-2"></span>
+  <h3>Instagram</h3>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">User</label>
+  <div class="col-sm-10">
+    <input name="instagram_user" type="text" value="<?php echo $data['table']['instagram_user']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="col-sm-12">
+  <span class="col-sm-2"></span>
+  <h3>Google</h3>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">ID</label>
+  <div class="col-sm-10">
+    <input name="youtube_id" type="text" value="<?php echo $data['table']['youtube_id']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">Secret</label>
+  <div class="col-sm-10">
+    <input name="youtube_secret" type="text" value="<?php echo $data['table']['youtube_secret']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">Token</label>
+  <div class="col-sm-10">
+    <textarea name="youtube_token" class="form-control" rows="4" placeholder=""><?php echo $data['table']['youtube_token']; ?></textarea>
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">Analytics View</label>
+  <div class="col-sm-10">
+    <input name="ga_view" type="text" value="<?php echo $data['table']['ga_view']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="col-sm-12">
+  <span class="col-sm-2"></span>
+  <h3>Discus</h3>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 control-label">User</label>
+  <div class="col-sm-10">
+    <input name="discus_username" type="text" value="<?php echo $data['table']['discus_username']; ?>" placeholder="" class="form-control">
+  </div>
+</div>
+
+<div class="form-group form-group-submit">
+  <span class="loadingsubmit"></span>
+  <button type="submit" class="btn btn-default" tabindex="-1">Salvar</button>
+</div>
+
+</form>
+</div>
+</div>
+
+</div>
 </div>
