--- a/src/app/Admin/Views/includes/pagination.phtml
+++ b/src/app/Admin/Views/includes/pagination.phtml
@@ -1,6 +1,6 @@
 <?php if ( !count($data['list']) ): ?>
   <div class="header">
-    <h4>Sua precisa não encontrou resultados</h4>
+    <h4>Sua pesquisa não encontrou resultados</h4>
   </div>
 <?php else: ?>
   <div class="row">
